@@ -188,6 +188,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #5068: Fixed the tarfile._BZ2Proxy.read() method that would loop
+  forever on incomplete input. That caused tarfile.open() to hang when used
+  with mode 'r' or 'r:bz2' and a fileobj argument that contained no data or
+  partial bzip2 compressed data.
+
 - Issue #5536: urllib.urlretrieve makes sure to close the file it's writing to
   even if an exception occurs.
 
